# MRFSGRE_BBB

./: .gitignore  LICENSE  README.md  pyproject.toml
coreSimulations/: BnBCost.py  FA_FISP.csv  comparingtotheory.ipynb  dictionaryGeneration.py  dictionaryGenerationFast.py  dictionaryGenerationGPU.py  fa_jiang  generatingParameterVariation.ipynb  legacyGPU.py  optim_TR_FA_gen.py  profile_results.txt  signal_optimisation.ipynb  testhelperfunctions.py  testing.ipynb  tr_jiang
coreSimulations/functions/: DictionaryGeneratorFast.py  Dictionary_Generator_Fastest.py  GPUDictionaryGenerator.py  appliedPrecession.py  blochSimulation.py  blochSimulationGPU.py  invPulse.py  longTR.py  numba_helper.py  rfPulse.py  rfSpoil.py  rotationCalculations.py
dictionaries/: README.md  add_noise.ipynb  plotting.ipynb
dictionaries/Dictionary2Dsim/: echo_1300_1700_1000_1.0_1.0_1.npy  echo_1300_1700_1000_1.0_1.0_10.npy  echo_1300_1700_1000_1.0_1.0_11.npy  echo_1300_1700_1000_1.0_1.0_12.npy  echo_1300_1700_1000_1.0_1.0_13.npy  echo_1300_1700_1000_1.0_1.0_14.npy  echo_1300_1700_1000_1.0_1.0_15.npy  echo_1300_1700_1000_1.0_1.0_16.npy  echo_1300_1700_1000_1.0_1.0_17.npy  echo_1300_1700_1000_1.0_1.0_18.npy  (+7491 more)
dictionaryMatching/: b1FirstMatching.py  dictionaryConversion.py  matching_notebook.ipynb  simulationMatching.py  standardMatching.py
plottingAndStatistics/: quantitativeMaps.py  simulationGridPlotting.py  statistics.py
sampleData/: NotesOnData.txt  processSynthSeg.sh
sliceProfile/: SliceProfileGenerationREADME.md  angle.mat  rf.mat  rfideal.mat  t.mat  xx.mat
(+460 files in other folders)
