[project]
name = “MRFSGRE_BBB"
version = "0.0.1"
authors = [
  { name=“Emma Thomson“, email=“e.thomson.19@ucl.ac.uk” },
]
description = "Bloch Simulaton code for a two compartment model with a semipermeable barrier "
readme = "README.md"
requires-python = ">=3.8”
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/EmmaThomson/MRFSGRE_BBB.git"
